<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="5dp"
    android:elevation="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:elevation="3dp"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:orientation="vertical"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/judul_berita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/source_sans_pro"
                        android:text="@string/judul_berita_default"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <TextView
                    android:id="@+id/isi_berita"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="11sp"
                    android:maxLines= "2"
                    android:ellipsize="end"
                    android:text="@string/isi_berita_default"/>
            </LinearLayout>
            <ImageView
                android:layout_width="89dp"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_launcher"
                android:contentDescription="@string/gambar_berita" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>