<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:background="@drawable/header"
        android:orientation="vertical"
        android:paddingLeft="34dp"
        android:paddingRight="34dp">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/container"
        android:elevation="3dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:autofillHints="Username"
            android:background="@drawable/textbox"
            android:drawableEnd="@drawable/ic_baseline_person_24"
            android:hint="@string/username_hint"
            android:paddingStart="16dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:autofillHints="Password"
            android:background="@drawable/textbox"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:text="@string/login_button_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="Versi 1.0.0"
        android:textSize="20sp" />
</RelativeLayout>